# elivro-imagine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-write-format.sh
.claude/scripts/: check-dev-tracker.js  check-src-edit.js
.claude/skills/changelog-generator/: SKILL.md  get_commits.py
.claude/skills/complete-release/: SKILL.md
.claude/skills/create-release/: SKILL.md
.claude/skills/dev-tracker/: SKILL.md
.claude/skills/dev-tracker/scripts/: .env  .env.example  api.py  config.py  git_utils.py  release_manager.py
.claude/skills/implementation-review/: SKILL.md
.claude/skills/mark-ready/: SKILL.md
.claude/skills/payload-standards/: SKILL.md
src/elivroimagine/: __init__.py  __main__.py  app.py  classifier.py  clipboard.py  config.py  devtracker.py  hotkey.py  paster.py  recorder.py  settings_ui.py  sounds.py  splash.py  storage.py  transcriber.py  tray.py  utilities.py  utils.py  windows.py  windows_integration.py
tests/: conftest.py  test_app.py  test_classifier.py  test_clipboard.py  test_config.py  test_devtracker.py  test_hotkey.py  test_integration.py  test_paster.py  test_recorder.py  test_sounds.py  test_splash.py  test_storage.py  test_transcriber.py  test_tray.py  test_utilities.py  test_utils.py  test_windows.py  test_windows_integration.py
