[project]
name = "elivroimagine"
version = "0.2.0"
description = "Voice-to-backlog tool for Elivro development - record thoughts, transcribe locally with Whisper"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jimmy" }]

dependencies = [
    "faster-whisper>=1.0.0,<2.0.0",
    "pynput>=1.7.6,<2.0.0",
    "keyboard>=0.13.5",
    "sounddevice>=0.5.0,<1.0.0",
    "pystray>=0.19.5,<1.0.0",
    "Pillow>=10.0.0,<12.0.0",
    "PyYAML>=6.0,<7.0",
    "numpy>=1.24.0,<3.0.0",
    "pygame>=2.5.0,<3.0.0",
    "requests>=2.28.0,<3.0.0",
]

[tool.setuptools.package-data]
elivroimagine = ["sounds/*.mp3", "assets/*.png", "assets/*.ico"]

[project.scripts]
elivroimagine = "elivroimagine.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "pytest-timeout>=2.2.0"]
windows = ["pywin32>=306"]  # For Start Menu shortcut creation

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--timeout=10"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
